--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     build: .
     networks:
       - traefik-public
+      - cors-anywhere-private-network
     deploy:
       mode: replicated
       replicas: 1
@@ -17,5 +18,6 @@ services:
         - traefik.http.routers.cors-anywhere.middlewares=redirect@file
 
 networks:
+  cors-anywhere-private-network:
   traefik-public:
     external: true
